--- a/welcome.html
+++ b/welcome.html
@@ -63,9 +63,42 @@
 <a class="btn btn-dark btn-pill btn-wide"
    href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
    target="_blank" rel="noopener">
-   JOIN OUR SLACK COMMUNITY
+   JOIN OUR SLACK
 </a>
       </div>
+
+<!-- Social Media Icons -->
+    <div class="hero-social-icons">
+      <a href="mailto:lisa@yogawithlisa.ai?subject=Yoga%20with%20Lisa%20Inquiry"
+         class="icon-btn">
+        <img src="images/icons/email.svg" alt="Email">
+      </a>
+
+      <a href="https://calendly.com/lisaeshunwilson/30min"
+         class="icon-btn">
+        <img src="images/icons/calendar.svg" alt="Email">
+      </a>
+
+      <a href="https://x.com/yogawithlisaai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/x-twitter.svg" alt="Twitter / X">
+      </a>
+
+      <a href="https://www.instagram.com/yogawithlisa.ai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/instagram.svg" alt="Instagram">
+      </a>
+
+      <a href="https://www.tiktok.com/@yogawithlisa.ai"
+         target="_blank" rel="noopener"
+         class="icon-btn">
+        <img src="images/icons/tiktok.svg" alt="TikTok">
+      </a>
+    </div>
+  </div>
+
     </div>
   </section>
 
@@ -73,7 +106,8 @@
   <section class="intro container">
     <h2>Welcome, thank you so much for joining our community of yogis! ✨</h2>
     <p>
-You've unlocked our full library of yoga and meditation classes with a premium subscription! You now have access to yoga and meditation classes as well as health & wellness tips. Take a breath, settle in, and explore what feels good for you today, we're so happy your here.  
+    You’ve unlocked access to our complimentary yoga and meditation classes through your free membership.
+I invite you to join our Slack community, connect with us on socials, and explore additional wellness and health insights designed to support your nervous system, mind, and body. Take a breath. Settle in. Move in a way that feels aligned for you today. We’re grateful to have you here.
     </p>
   </section>
 
