--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
         <img src="images/icons/calendar.svg" alt="Email">
       </a>
 
+<a href="https://www.youtube.com/@yogawihlisaai"
+         class="icon-btn">
+        <img src="images/icons/youtube.svg" alt="YouTube">
+      </a>
+
+ <a href="https://youtube.com/playlist?list=PLTtp074TeY17ZvuBM4iJXZDFkYXCGsHcn&si=FL9INuRlPt7kS1gD"
+         class="icon-btn">
+        <img src="images/icons/music.svg" alt="Music">
+      </a>
+
       <a href="https://x.com/yogawithlisaai"
          target="_blank" rel="noopener"
          class="icon-btn">
@@ -380,6 +390,11 @@
       <a href="https://calendly.com/lisaeshunwilson/30min"
          class="icon-btn">
         <img src="images/icons/calendar.svg" alt="Email">
+      </a>
+
+      <a href="https://www.youtube.com/@yogawihlisaai"
+         class="icon-btn">
+        <img src="images/icons/youtube.svg" alt="YouTube">
       </a>
 
         <a href="https://x.com/yogawithlisaai" target="_blank" rel="noopener"
