--- a/welcome.html
+++ b/welcome.html
@@ -79,6 +79,16 @@
         <img src="images/icons/calendar.svg" alt="Email">
       </a>
 
+ <a href="https://www.youtube.com/@yogawihlisaai"
+         class="icon-btn">
+        <img src="images/icons/youtube.svg" alt="YouTube">
+      </a>
+
+ <a href="https://youtube.com/playlist?list=PLTtp074TeY17ZvuBM4iJXZDFkYXCGsHcn&si=FL9INuRlPt7kS1gD"
+         class="icon-btn">
+        <img src="images/icons/music.svg" alt="Music">
+      </a>
+
       <a href="https://x.com/yogawithlisaai"
          target="_blank" rel="noopener"
          class="icon-btn">
@@ -189,6 +199,20 @@ I invite you to join our Slack community, connect with us on socials, and explor
            class="btn btn-pill btn-dark">Level Up Your Practice</a>
       </div>
     </article>
+
+    <!-- Wellness -->
+    <article class="wellness-card">
+      <a class="poster" href="login.html">
+        <img src="images/wellness.jpg" alt="Wellness">
+      </a>
+      <div class="meta">
+        <h3>Health & Wellness</h3>
+        <p>Soak in the benefits of tips & insights into how to eat, journal, and live well.</p>
+        <a href="wellness.html"
+           class="btn btn-pill btn-dark">Live Well</a>
+      </div>
+    </article>
+
   </div>
 </section>
 
