--- a/welcome.html
+++ b/welcome.html
@@ -207,7 +207,7 @@ I invite you to join our Slack community, connect with us on socials, and explor
       </a>
       <div class="meta">
         <h3>Health & Wellness</h3>
-        <p>Soak in the benefits of tips & insights into how to eat, journal, and live well.</p>
+        <p>Soak in thoughtful tips, journal prompts, and insights into how to eat and live well.</p>
         <a href="wellness.html"
            class="btn btn-pill btn-dark">Live Well</a>
       </div>
