--- a/viewplans.html
+++ b/viewplans.html
@@ -338,6 +338,33 @@
 
         <div class="grid">
 
+           <!-- Free -->
+          <article class="plan plan--free" aria-label="Free plan">
+            <div class="plan-top">
+              <h2 class="plan-title">Free Plan</h2>
+              <span class="badge">Basic</span>
+            </div>
+
+            <p class="plan-desc">
+              Access our free yoga and meditation classes as our gift to you to introduce you to our content. 
+            </p>
+
+            <div class="features-label">Includes</div>
+            <ul class="features">
+              <li><span class="check">✓</span> Full access to 12 on-demand class (Hatha, Vinyasa, & Ashtanga). </li>
+              <li><span class="check">✓</span> Mini meditation + mindfulness series to regulate nerves. </li>
+              <li><span class="check">✓</span> Access to our monthly newsletter and live events.</li>
+              <li><span class="check">✓</span> Email support &amp; studio-style guidance from Lisa</li>
+            </ul>
+
+            <div class="plan-actions">
+              <!-- Link this to your monthly Stripe checkout / Memberstack checkout -->
+              <a class="btn btn-primary" href="create-account.html">Start Free Trial</a>
+              <a class="btn btn-ghost" href="index.html#testimonials">See Reviews</a>
+            </div>
+          </article>
+
+
           <!-- Monthly -->
           <article class="plan plan--monthly" aria-label="Monthly plan">
             <div class="plan-top">
